style: add min-width to prevent sudden layout shifts

--- a/src/pages/movie-details/MovieDetails.module.css
+++ b/src/pages/movie-details/MovieDetails.module.css
@@ -33,6 +33,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1.25rem;
+  min-width: 16rem;
 }
 
 .poster {
